# knowmo

./: README.md  pyproject.toml
src/knowmo/data/people/: crag.trig  jd.trig  triangle.trig
src/notebooks/: rdf.ipynb
