[tool.poetry]
name = "knowmo"
version = "0.1.0"
description = "Personal knowledge graph and tools"
authors = ["JD White <jdeveloperw@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

rdflib = "*"
pyoxigraph = "^0.3.19"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
